--- a/src/main/resources/templates/plain-login.html
+++ b/src/main/resources/templates/plain-login.html
@@ -1,28 +1,69 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.tymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Custon Login Page</title>
-</head>
+ <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <title>Bootstrap Example</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
 <body>
+        <div class="container">
+            <div id="loginbox" style="margin-top: 50px;" class="col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-2">
+                <div class="card border-info">
+                    <div class="card-header bg-info">
+                        Login
+                    </div>
 
-	<h3>My custon login page</h3>
-	
-	<form action="#" th:action="@{/authenticateTheUser}" method="POST">
-		
-		<p>
-				User name: <input type="text" name="username"/>
-		</p>
-		
-		<p>
-				Password: <input type="password" name="password"/>
-		</p>
-		
-		<input type="submit" value="Login" />
-		
-		
-	</form>
+                    <div class="card-body">
+                        <div class="card-text">
 
+                            <!-- Login Form -->
+                            <form action="#" th:action="@{/authenticateTheUser}" method="POST" class="form-horizontal">
 
-</body>
+                                <!-- Place for messages: error, alert etc ... -->
+                                <div class="form-group">
+                                    <div class="col-xs-15">
+                                        <div>
+                                            <!-- Check for login error -->
+
+                                            
+                                            <div>
+
+                                                <div class="alert alert-danger col-xs-offset-1 col-xs-10" th:if="${param.error}" >
+                                                    usuário ou senha inválidos
+                                                </div>
+
+                                            </div>
+                                           
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- User name -->
+                                <div style="margin-bottom: 25px;" class="input-group">
+                                    <input type="text" name="username" placeholder="usuario" class="form-control" />
+                                </div>
+
+                                <!-- Password -->
+                                <div style="margin-bottom: 25px;" class="input-group">
+                                    <input type="password" name="password" placeholder="senha" class="form-control" />
+                                </div>
+
+                                <!-- Login/Submit Button -->
+                                <div style="margin-top: 10px;" class="form-group">
+                                    <div class="col-sm-6 controls">
+                                        <button type="submit" class="btn btn-success">Login</button>
+                                    </div>
+                                </div>
+
+                            </form>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
