--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.tymeleaf.org">
+<html xmlns:th="http://www.tymeleaf.org" xmlns:sec="http://www.tymeleaf.org/extras/spring-security" >
  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,6 +20,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+      
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -50,6 +51,28 @@
               </ul>
             </li>
           </ul>
+          
+            <div class="container">
+    			<form action="#"  th:action="@{/logout}" method="POST">
+    			  
+    			  <button value="Logout" type="submit" class="btn btn-secondary">
+    			  		
+    			  			<span sec:authentication="principal.username"></span> 
+    			  		
+    			  	</button>
+    			  
+    			  
+				
+   				 </form>
+  			</div>
+          
+          	 
+		
+				
+			
+			
+          
+          
         </div>
       </div>
     </nav>
