--- a/src/main/resources/templates/plain-login.html
+++ b/src/main/resources/templates/plain-login.html
@@ -8,62 +8,68 @@
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-<body>
-        <div class="container">
-            <div id="loginbox" style="margin-top: 50px;" class="col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-2">
-                <div class="card border-info">
-                    <div class="card-header bg-info">
-                        Login
-                    </div>
+  <div th:fragment="menu-principal">
+	  
+  <body class="p-3 m-0 border-0 bd-example m-0 border-0">
 
-                    <div class="card-body">
-                        <div class="card-text">
 
-                            <!-- Login Form -->
-                            <form action="#" th:action="@{/authenticateTheUser}" method="POST" class="form-horizontal">
-
-                                <!-- Place for messages: error, alert etc ... -->
-                                <div class="form-group">
-                                    <div class="col-xs-15">
-                                        <div>
-                                            <!-- Check for login error -->
-
-                                            
-                                            <div>
-
-                                                <div class="alert alert-danger col-xs-offset-1 col-xs-10" th:if="${param.error}" >
+	
+	<nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">CEASA</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" >Grupo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" >Subgrupo</a>
+            </li>
+              <li class="nav-item">
+              <a class="nav-link">Produto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Propriedade</a>
+            </li>
+            
+            
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Cotação
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" >Cotar</a></li>
+                <li><a class="dropdown-item" >Relatório</a></li>
+                <li><a class="dropdown-item" >Consultar</a></li>
+              </ul>
+            </li>
+          </ul>
+          
+            <div class="login-container">
+    			<form action="#" th:action="@{/authenticateTheUser}" method="POST">
+					   <div class="alert alert-danger col-xs-offset-1 col-xs-10" th:if="${param.error}" >
                                                     usuário ou senha inválidos
-                                                </div>
-
-                                            </div>
-                                           
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- User name -->
-                                <div style="margin-bottom: 25px;" class="input-group">
-                                    <input type="text" name="username" placeholder="usuario" class="form-control" />
-                                </div>
-
-                                <!-- Password -->
-                                <div style="margin-bottom: 25px;" class="input-group">
-                                    <input type="password" name="password" placeholder="senha" class="form-control" />
-                                </div>
-
-                                <!-- Login/Submit Button -->
-                                <div style="margin-top: 10px;" class="form-group">
-                                    <div class="col-sm-6 controls">
-                                        <button type="submit" class="btn btn-success">Login</button>
-                                    </div>
-                                </div>
-
-                            </form>
-                            
                         </div>
-                    </div>
-                </div>
-            </div>
+    			  <input type="text" placeholder="Usuário" name="username">
+    			  <input type="text" placeholder="Senha" name="password">
+    			  <button type="submit">Login</button>
+   				 </form>
+  			</div>
+          
         </div>
-    </body>
+      </div>
+    </nav>
+</div>
+
+
+
+
+  </body>
 </html>
