Formulario de login na direita no plain-login

--- a/src/main/resources/templates/plain-login.html
+++ b/src/main/resources/templates/plain-login.html
@@ -52,7 +52,7 @@
             </li>
           </ul>
           
-            <div class="login-container">
+            <div class="login-container ms-auto">
     			<form action="#" th:action="@{/authenticateTheUser}" method="POST">
 					   <div class="alert alert-danger col-xs-offset-1 col-xs-10" th:if="${param.error}" >
                                                     usuário ou senha inválidos
