another Controllers and htmls created to test secutity

--- a/src/main/resources/templates/subgrupo/subgrupo_cadastro.html
+++ b/src/main/resources/templates/subgrupo/subgrupo_cadastro.html
@@ -14,7 +14,9 @@
 
 	<div id="navmenu" th:insert="~{navbar :: menu-principal}"> </div>
 
-	<h3>Seja bem vindo!!!</h3>
+	<h3>Subgrupo cadastro</h3>
+	
+	<a class="inicio" th:href="@{/}">INICIO</a>
 
 
 </body>
