--- a/src/main/resources/templates/plain-login.html
+++ b/src/main/resources/templates/plain-login.html
@@ -14,9 +14,9 @@
 
 
 	
-	<nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">CEASA</a>
+	<nav class="navbar navbar-expand-lg bg-success">
+      <div class="container-fluid text-light">
+        <a class="navbar-brand text-light" href="/">CEASA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,24 +24,24 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active text-light" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" >Grupo</a>
+              <a class="nav-link text-light" >Grupo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" >Subgrupo</a>
+              <a class="nav-link text-light" >Subgrupo</a>
             </li>
               <li class="nav-item">
-              <a class="nav-link">Produto</a>
+              <a class="nav-link text-light">Produto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link">Propriedade</a>
+              <a class="nav-link text-light">Propriedade</a>
             </li>
             
             
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle text-light" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Cotação
               </a>
               <ul class="dropdown-menu">
