--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -27,7 +27,7 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/grupos/cadastrar">Grupo</a>
+              <a class="nav-link" sec:authorize="hasRole('ADMIN')" href="/grupos/cadastrar">Grupo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/subgrupos/cadastrar">Subgrupo</a>
