--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -26,8 +26,14 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" sec:authorize="hasRole('ADMIN')" href="/grupos/cadastrar">Grupo</a>
+           <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Grupo
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" sec:authorize="hasRole('MANAGER')" th:href="@{/grupos/cadastrar}">Cadastro</a></li>
+                <li><a class="dropdown-item" th:href="@{/grupos/cadastrar}">Listagem</a></li>
+                </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/subgrupos/cadastrar">Subgrupo</a>
@@ -39,6 +45,7 @@
               <a class="nav-link" href="/propriedades/cadastrar">Propriedade</a>
             </li>
             
+             
             
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
