grupo controller with spring security ok

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -32,7 +32,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" sec:authorize="hasRole('MANAGER')" th:href="@{/grupos/cadastrar}">Cadastro</a></li>
-                <li><a class="dropdown-item" th:href="@{/grupos/cadastrar}">Listagem</a></li>
+                <li><a class="dropdown-item" th:href="@{/grupos/listar}">Listagem</a></li>
                 </ul>
             </li>
             <li class="nav-item">
