--- a/src/main/resources/static/css/myStyle.css
+++ b/src/main/resources/static/css/myStyle.css
@@ -1,8 +1,16 @@
-/*@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");*/
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
   
 
-
-
+div#responsive-imgs img {
+  display: block;
+  margin: 5px auto;
+  max-width: 100%;
+  align-items: center;
+  
+}
+.text-center .img-responsive {
+    margin: 0 auto;
+}
 
 a.add {
     padding-top:4 cm;
@@ -18,3 +26,31 @@ table.table td a.delete {
 table.table td a.edit {
     color: #FFC107;
 }
+
+ .footer {
+ position: relative;
+left: 0;
+bottom: 0;
+width: 100%;
+background-color: #4F4F4F;
+color: white;
+text-align: center;
+ }
+  .footer1 {
+ position: absolute;
+left: 0;
+bottom: 0;
+width: 100%;
+background-color: #4F4F4F;
+color: white;
+text-align: center;
+ }
+ .footer2 {
+    clear: both;
+    position: absolute;
+   
+    margin-top: 200px;
+    }
+    
+    
+    
