--- a/src/main/resources/templates/grupo/grupo_listagem.html
+++ b/src/main/resources/templates/grupo/grupo_listagem.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+	
 	<div id="navmenu" th:insert="~{navbar :: menu-principal}"> </div>
 
 
@@ -21,33 +21,6 @@
 
 	<section class="layout-content" >
 	<div class="container-fluid">
-		
-		
-		<div th:replace="~{alert}"></div>
-		
-		
-		<form
-				th:action="${grupo.id==null} ? @{/grupos/salvar} : @{/grupos/editar}"
-				th:object="${grupo}" method="POST">
-
-				<div th:replace="~{validacao :: validacao}"></div>
-				
-			
-				<div class="form-group">
-					<div class="form-group col-md-3" >
-						
-						<br></br>
-						<p >Cadastro de Grupo </p>
-						<input type="text" class="form-control" id="nome" style="float:left"
-						placeholder="Nome Grupo" autofocus="autofocus" th:field="*{nome}" />
-					</div>
-				
-				<input type="hidden" id="id" th:field="*{id}" />
-				<button type="submit" class="btn btn-primary btn-sm" style="margin-left: 8pt">Gravar</button>
-				<br></br>
-				<a class="inicio" th:href="@{/}">Voltar</a>
-				</div>
-			</form>
 		
 		<table class="table">
 				
@@ -66,10 +39,10 @@
 					<td th:text="${g.nome}"></td>
 					
 					<td>
-              			<a type="button" class="edit" title="Editar" th:href="@{/grupos/editar/{id} (id=${g.id}) }">
+              			<a type="button" class="edit" title="Editar" sec:authorize="hasRole('MANAGER')" th:href="@{/grupos/editar/{id} (id=${g.id}) }">
                			 <i class="bi bi-pencil-square"></i>
              		 	</a>
-              			<a type="button" class="delete"  title="Excluir" sec:authorize="hasRole('ADMIN')" th:href="@{/grupos/excluir/{id} (id=${g.id}) }" >
+              			<a type="button" class="delete"  title="Excluir" sec:authorize="hasRole('ADMIN')"  th:href="@{/grupos/excluir/{id} (id=${g.id}) }" >
                			<i class="bi bi-trash3"></i></a>
            			 
 					
@@ -89,14 +62,7 @@
 		
 	</div>
 	
-	<div th:replace="~{modal :: modal}"></div>
-	
-	</section>
+		
 
-<div class="footer1">
- <footer th:insert="~{footer :: pie-pagina}" class="footer"></footer>
- 
-</div>
 </body>
-
 </html>
