--- a/src/main/resources/templates/indexpage.html
+++ b/src/main/resources/templates/indexpage.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-	<title>Bootstrap Example</title>
+	<title>Sistema DEVCEASA</title>
+	<link th:href="@{/css/myStyle.css}" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -14,7 +15,17 @@
 
 	<div id="navmenu" th:insert="~{navbar :: menu-principal}"> </div>
 
-	<h3>Seja bem vindo!!!</h3>
+
+
+<div class="container">
+    <div class="row">
+        <div class=" col-md-12 text-center">
+			<br></br>
+            <img class="img-responsive" th:src="@{/image/logo2.png}" alt="Imagem"/>
+        </div>               
+    </div>
+</div>
+
 
 
 </body>
