--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -35,10 +35,18 @@
                 <li><a class="dropdown-item" th:href="@{/grupos/listar}">Listagem</a></li>
                 </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/subgrupos/cadastrar">Subgrupo</a>
+            
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Subgrupo
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" sec:authorize="hasRole('MANAGER')" th:href="@{/subgrupos/cadastrar}">Cadastro</a></li>
+                <li><a class="dropdown-item" th:href="@{/subgrupos/listar}">Listagem</a></li>
+                </ul>
             </li>
-              <li class="nav-item">
+            
+             <li class="nav-item">
               <a class="nav-link" href="/produtos/cadastrar">Produto</a>
             </li>
             <li class="nav-item">
