--- a/src/main/resources/templates/propriedade/propriedade_cadastro.html
+++ b/src/main/resources/templates/propriedade/propriedade_cadastro.html
@@ -6,19 +6,157 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-	<title>Bootstrap Example</title>
+	<link th:href="@{/css/myStyle.css}" rel="stylesheet">
+	<title>Sistema DEVCEASA</title>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
 
 	<div id="navmenu" th:insert="~{navbar :: menu-principal}"> </div>
+	
+	<section class="layout-content" layout:fragment="corpo">
 
-	<h3>Propriedade cadastro</h3>
+		<div class="page-header">
+			<nav class="navbar navbar-expand-md navbar-top bg-light">
+				<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+					<ul class="navbar-nav">
+						<li class="nav-item active"><i class="oi oi-caret-right"></i>
+						<span style="color:#FFFFFF">Cadastrar Propriedades</span></li>
+					</ul>
+				</div>
+				<!--<a class="btn btn-primary btn-md"
+					th:href="@{/ceasadev/propriedades/listar}" role="button"> <span
+					class="oi oi-spreadsheet" title="Cadastro" aria-hidden="true"></span>
+					<span>Listar Propriedades</span>
+				</a>-->
+			</nav>
+		</div>
+
+		<div class="container" id="cadastro">
+
+			<div th:replace="~{alert}"></div>
+
+
+			<form
+				th:action="${propriedade.id == null} ? @{/propriedades/salvar} : @{/propriedades/editar}"
+				th:object="${propriedade}" method="POST">
+
+				<div th:replace="~{validacao :: validacao}"></div>
+
+				<div class="form-row">
+					<div class="form-group col-md-6">
+						
+						
+						<label for="produto">Produto</label> 
+						<select id="produto" class="form-control" th:field="*{produto}" required>
+							<option value="">Selecione...</option>
+							<option th:each="p : ${produtos}" th:value="${p.id}"
+									th:text="${p.nome} + '   -   ' + ${p.subgrupo.nome}">
+							</option>
+						</select>
+					
+					</div>
+				</div>
+
+				<div class="form-row">
+					<div class="form-group col-md-6">
+						<label for="variedade">Variedade</label> <input type="text"
+							class="form-control" id="variedade" placeholder="Variedade"
+							autofocus="autofocus" th:field="*{variedade}"
+							th:classappend="${#fields.hasErrors('variedade')} ? 'is-invalid'" />
+						<div class="invalid-feedback">
+							<span th:errors="*{variedade}"></span>
+						</div>
+					</div>
+
+					<div class="form-group col-md-6">
+						<label for="subvariedade">Subvariedade</label> <input type="text"
+							class="form-control" id="subvariedade" placeholder="Subvariedade"
+							autofocus="autofocus" th:field="*{subvariedade}"
+							th:classappend="${#fields.hasErrors('subvariedade')} ? 'is-invalid'" />
+						<div class="invalid-feedback">
+							<span th:errors="*{subvariedade}"></span>
+						</div>
+
+					</div>
+
+				</div>
+				<div class="form-row">
+					<div class="form-group col-md-6">
+						<label for="classificacao">Classificacao</label> <input
+							type="text" class="form-control" id="classificacao"
+							placeholder="Classificacao" autofocus="autofocus"
+							th:field="*{classificacao}"
+							th:classappend="${#fields.hasErrors('classificacao')} ? 'is-invalid'" />
+						<div class="invalid-feedback">
+							<span th:errors="*{classificacao}"></span>
+						</div>
+					</div>
+
+					<div class="form-group col-md-6">
+						<label for="embalagem">Embalagem</label> <input type="text"
+							class="form-control" id="embalagem" placeholder="embalagem"
+							autofocus="autofocus" th:field="*{embalagem}"
+							th:classappend="${#fields.hasErrors('embalagem')} ? 'is-invalid'" />
+						<div class="invalid-feedback">
+							<span th:errors="*{embalagem}"></span>
+						</div>
+					</div>
+				</div>
+				<div class="form-row">
+					<div class="form-group col-md-6">
+						<label for="peso">Peso</label> <input type="text" pattern="\d*" 
+							class="form-control" id="peso" placeholder="Peso"
+							autofocus="autofocus" th:field="*{peso}"
+							th:classappend="${#fields.hasErrors('peso')} ? 'is-invalid'" />
+						<div class="invalid-feedback">
+							<span Please provide a valid city.></span>
+							<span th:errors="*{peso}"></span>
+						</div>
+					</div>
+
+
+					<div class="form-group col-md-6">
+						<label for="unidade">Unidade</label> <select id="unidade"
+							class="form-control" th:field="*{unidade}"
+							th:classappend="${#fields.hasErrors('unidade')} ? 'is-invalid'">
+							<option th:each="tempUnidade : ${unidades}" th:value="
+								${tempUnidade}" th:text="${tempUnidade}"></option>
+						</select>
+						<div class="invalid-feedback">
+							<span th:errors="*{unidade}"></span>
+						</div>
+					</div>
+				</div>
+
+
+
+		<div class="form-check">
+
+			<input class="form-check-input" type="checkbox" placeholder="status"
+				value="1" id="status" checked th:field="*{status}"
+				th:classappend="${status}" th:checked="${status == 1} ? ${true}">
+			<label class="form-check-label" for="status">COTADO</label> <br></br>
+
+
+		</div>
+
+		
+		<input type="hidden" id="id" th:field="*{id}" />
+		<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+		</form>
+		</div>
+	</section>
+
+	
 	
 	<a class="inicio" th:href="@{/}">INICIO</a>
 
-
+<div class="footer1">
+ <footer th:insert="~{footer :: pie-pagina}" class="footer"></footer>
+ 
+</div>
 </body>
 
 </html>
