--- a/src/main/resources/templates/plain-login.html
+++ b/src/main/resources/templates/plain-login.html
@@ -33,7 +33,7 @@
                                                     usuário ou senha inválidos
                         </div>
     			  <input type="text" placeholder="Usuário" name="username">
-    			  <input type="text" placeholder="Senha" name="password">
+    			  <input type="password" placeholder="Senha" name="password">
     			  <button type="submit">Login</button>
    				 </form>
   			</div>
