--- a/src/main/resources/templates/grupo/grupo_cadastro.html
+++ b/src/main/resources/templates/grupo/grupo_cadastro.html
@@ -16,87 +16,90 @@
 	<div id="navmenu" th:insert="~{navbar :: menu-principal}"> </div>
 
 
-	
+	<div class="container">
 
 
-	<section class="layout-content" >
-	<div class="container-fluid">
-		
-		
 		<div th:replace="~{alert}"></div>
-		
-		
-		<form
-				th:action="${grupo.id==null} ? @{/grupos/salvar} : @{/grupos/editar}"
-				th:object="${grupo}" method="POST">
 
-				<div th:replace="~{validacao :: validacao}"></div>
-				
-			
-				<div class="form-group">
-					<div class="form-group col-md-3" >
+
+		<form th:action="${grupo.id==null} ? @{/grupos/salvar} : @{/grupos/editar}" th:object="${grupo}" method="POST">
+
+			<div th:replace="~{validacao :: validacao}"></div>
+
+
+			<div class="form-group">
+
+				<div class="form-group col-md-3">
+
+					<br>
+					<div class="meu-hr">
+
+						<p>Cadastro de grupos: </p>
 						
-						<br></br>
-						<p >Cadastro de Grupo </p>
-						<input type="text" class="form-control" id="nome" style="float:left"
-						placeholder="Nome Grupo" autofocus="autofocus" th:field="*{nome}" />
 					</div>
-				
+
+					<input type="text" class="form-control" id="nome" style="float:left" placeholder="Nome Grupo"
+						autofocus="autofocus" th:field="*{nome}" />
+				</div>
+
 				<input type="hidden" id="id" th:field="*{id}" />
 				<button type="submit" class="btn btn-primary btn-sm" style="margin-left: 8pt">Gravar</button>
-				<br></br>
-				<a class="inicio" th:href="@{/}">Voltar</a>
-				</div>
-			</form>
-		
-		<table class="table">
-				
-				<thead>
-					<tr>
-						<th>ID</th>
-						<th>Nome do Grupo</th>
-						<th>Ações</th>
-						
-					</tr>
-				</thead>
-				<!-- Use Thymeleaf loop para exibir grupos -->
-				
-				<tr th:each="g : ${grupos}">
-					<td th:text="${g.id}"></td>
-					<td th:text="${g.nome}"></td>
-					
-					<td>
-              			<a type="button" class="edit" title="Editar" th:href="@{/grupos/editar/{id} (id=${g.id}) }">
-               			 <i class="bi bi-pencil-square"></i>
-             		 	</a>
-              			<a type="button" class="delete"  title="Excluir" sec:authorize="hasRole('ADMIN')" th:href="@{/grupos/excluir/{id} (id=${g.id}) }" >
-               			<i class="bi bi-trash3"></i></a>
-           			 
-					
-							<!-- <a  class="btn disabled" aria-disabled="true" role="button" data-bs-toggle="button" title="Excluir" th:href="@{/ceasadev/grupos/excluir/{id} (id=${g.id}) }">
-							<i class="bi bi-trash3"></i></a> -->
-	                
-	                
-	               		<a class="look" th:href="@{/subgrupos/grupos/{id} (id=${g.id})}" >
-	               		<i class="bi bi-eye-fill" title="Subgrupos"></i></a> 
-	                	 <tr th:each="s : ${subgrupos}">
-	                	 <td th:text="${s.id}"></td>
-	                	<td th:text="${s.nome}">
-	                </td>
-				</tr>
-				
-			</table>
-		
-	</div>
-	
-	<div th:replace="~{modal :: modal}"></div>
-	
-	</section>
 
-<div class="footer1">
- <footer th:insert="~{footer :: pie-pagina}" class="footer"></footer>
- 
-</div>
+				<br></br>
+				<a class="inicio" th:href="@{/}">Início</a>
+
+			</div>
+		</form>
+
+		<table class="table table-bordered">
+
+			<thead>
+				<tr>
+					<th>ID</th>
+					<th>Nome do Grupo</th>
+					<th>Ações</th>
+
+				</tr>
+			</thead>
+			<!-- Use Thymeleaf loop para exibir grupos -->
+
+			<tr th:each="g : ${grupos}">
+				<td th:text="${g.id}"></td>
+				<td th:text="${g.nome}"></td>
+
+				<td>
+					<a type="button" class="edit" title="Editar" th:href="@{/grupos/editar/{id} (id=${g.id}) }">
+						<i class="bi bi-pencil-square"></i>
+					</a>
+					<a type="button" class="delete" title="Excluir" sec:authorize="hasRole('ADMIN')"
+						th:href="@{/grupos/excluir/{id} (id=${g.id}) }">
+						<i class="bi bi-trash3"></i></a>
+
+
+					<!-- <a  class="btn disabled" aria-disabled="true" role="button" data-bs-toggle="button" title="Excluir" th:href="@{/ceasadev/grupos/excluir/{id} (id=${g.id}) }">
+							<i class="bi bi-trash3"></i></a> -->
+
+
+					<a class="look" th:href="@{/subgrupos/grupos/{id} (id=${g.id})}">
+						<i class="bi bi-eye-fill" title="Subgrupos"></i></a>
+			<tr th:each="s : ${subgrupos}">
+				<td th:text="${s.id}"></td>
+				<td th:text="${s.nome}">
+				</td>
+			</tr>
+			
+		</table>
+<br><br>
+	</div>
+
+	<div th:replace="~{modal :: modal}"></div>
+
+
+
+	<div class="footer1">
+		<footer th:insert="~{footer :: pie-pagina}" class="footer"></footer>
+
+	</div>
 </body>
 
 </html>
