--- a/src/main/resources/templates/produto/produto_listagem.html
+++ b/src/main/resources/templates/produto/produto_listagem.html
@@ -6,39 +6,46 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-	<link th:href="@{/css/myStyle.css}" rel="stylesheet">
 	<title>Sistema DEVCEASA</title>
+	<link th:href="@{/css/myStyle.css}" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-
+	
 	<div id="navmenu" th:insert="~{navbar :: menu-principal}"> </div>
 
-	
+
+
+
+	<section class="layout-content" layout:fragment="corpo">
 		<div class="container">
 			
 			<div class="form-group row">
 
-			<div class="col-sm-5">
-					
-					
-					<div th:replace="~{alert}"></div>
-						<br>
-						<form th:object="${produto}" th:action="@{/produtos/nomes}" method="get">
-							<input type="text" name="search" id="search" th:value="${search}" />
-							<input type="submit" value="Pesquisar um produto" />
-						</form>
-					</div>
-					
+
+				<div class="col-sm-5">
+
+					<form th:object="${produto}" th:action="@{/produtos/nomes}" method="get">
+						<input type="text" name="search" id="search" th:value="${search}" />
+						<input type="submit" value="Pesquisar um produto" />
+					</form>
+				</div>
 					<div class="col-sm-5">
-						<br>
-						<a th:href="@{/produtos/formcadastro}" class="btn btn-primary btn-sm mb-1"> Novo Produto </a>
+
+						<a th:href="@{/produtos/produto_form}" class="btn btn-primary btn-sm mb-1"> Novo Produto </a>
 					</div>
-			</div>
-			<hr>
+					
+					
+					<div th:replace="alert"></div>
 				
-				<h5>Lista de Produtos</h5>
+
+
+			</div>
+
+
+
+			<h5>Lista de Produtos</h5>
 
 
 
@@ -48,7 +55,7 @@
 						<th><a th:href="@{'/produtos/page/' +${currentPage} 
 									+ '?sortField=id&sortDir=' 
 									+ ${reverseSortDir}}">Id</a></th>
-						<th><a th:href="@{'/produtos/page/' +${currentPage} 
+						<th><a th:href="@{'/ceasadev/produtos/page/' +${currentPage} 
 									+ '?sortField=nome&sortDir=' 
 									+ ${reverseSortDir}}">Produtos</a>
 						</th>
@@ -92,6 +99,9 @@
 				</tbody>
 			</table>
 
+
+
+
 			<div th:if="${totalPages > 1}">
 				<div class="pagination justify-content-center">
 					<div class="page-item disabled">Total Itens: [[${totalItems}]]</div>
@@ -129,13 +139,11 @@
 			</div>
 		</div>
 
-	
-	
-				
-	
-	<a class="inicio" th:href="@{/}">INICIO</a>
+	</section>
+
+
+
 
 
 </body>
-
 </html>
