--- a/src/main/resources/templates/subgrupo/subgrupo_cadastro.html
+++ b/src/main/resources/templates/subgrupo/subgrupo_cadastro.html
@@ -36,7 +36,7 @@
 				<div class="form-group col-md-3 gravar">
 					
 					<br>
-					<p >Cadastro de Subgrupo </p>
+					<div class="meu-hr"> Cadastro de Subgrupo </p><hr></div>
 					<input type="text" class="form-control" id="nome" 
 							placeholder="Nome Subgrupo" autofocus="autofocus" th:field="*{nome}" />
 
