--- a/src/main/resources/templates/subgrupo/subgrupo_listar.html
+++ b/src/main/resources/templates/subgrupo/subgrupo_listar.html
@@ -20,6 +20,12 @@
 
 			<div th:replace="~{alert}"></div>
 
+		<br>
+				<div class="meu-hr">
+					
+					<p>Listagem de subgrupos </p><hr>
+				</div>
+		
 		
 		<table class="table table-bordered">
 				
