--- a/src/main/resources/templates/produto/produto_listagem.html
+++ b/src/main/resources/templates/produto/produto_listagem.html
@@ -20,22 +20,9 @@
 
 	<section class="layout-content" layout:fragment="corpo">
 		<div class="container">
-			
+			<div class="meu-hr">Lista de produtos<hr></div>
 			<div class="form-group row">
 
-
-				<div class="col-sm-5">
-
-					<form th:object="${produto}" th:action="@{/produtos/nomes}" method="get">
-						<input type="text" name="search" id="search" th:value="${search}" />
-						<input type="submit" value="Pesquisar um produto" />
-					</form>
-				</div>
-					<div class="col-sm-5">
-
-						<a th:href="@{/produtos/produto_form}" class="btn btn-primary btn-sm mb-1"> Novo Produto </a>
-					</div>
-					
 					
 					<div th:replace="alert"></div>
 				
@@ -45,7 +32,10 @@
 
 
 
-			<h5>Lista de Produtos</h5>
+			
+		
+		
+		<a class="inicio" th:href="@{/}">Início</a>
 
 
 
