--- a/src/main/resources/templates/propriedade/propriedade_cadastro.html
+++ b/src/main/resources/templates/propriedade/propriedade_cadastro.html
@@ -15,26 +15,22 @@
 
 	<div id="navmenu" th:insert="~{navbar :: menu-principal}"> </div>
 	
-	<section class="layout-content" layout:fragment="corpo">
+	
+	
+	<div class="container">
+		
+		
+		<br>
+				<div class="meu-hr">
+					
+					<p>Cadastro de Propriedades de produtos </p>
+				
+			</div>
+	
+			
+		
 
-		<div class="page-header">
-			<nav class="navbar navbar-expand-md navbar-top bg-light">
-				<div class="collapse navbar-collapse" id="navbarsExampleDefault">
-					<ul class="navbar-nav">
-						<li class="nav-item active"><i class="oi oi-caret-right"></i>
-						<span style="color:#FFFFFF">Cadastrar Propriedades</span></li>
-					</ul>
-				</div>
-				<!--<a class="btn btn-primary btn-md"
-					th:href="@{/ceasadev/propriedades/listar}" role="button"> <span
-					class="oi oi-spreadsheet" title="Cadastro" aria-hidden="true"></span>
-					<span>Listar Propriedades</span>
-				</a>-->
-			</nav>
-		</div>
-
-		<div class="container" id="cadastro">
-
+		
 			<div th:replace="~{alert}"></div>
 
 
@@ -139,19 +135,22 @@
 				th:classappend="${status}" th:checked="${status == 1} ? ${true}">
 			<label class="form-check-label" for="status">COTADO</label> <br></br>
 
+		
 
 		</div>
-
-		
 		<input type="hidden" id="id" th:field="*{id}" />
 		<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+		
+		
 		</form>
 		</div>
-	</section>
+		
+		<br>
+	
 
 	
 	
-	<a class="inicio" th:href="@{/}">INICIO</a>
+
 
 <div class="footer1">
  <footer th:insert="~{footer :: pie-pagina}" class="footer"></footer>
