--- a/src/main/resources/templates/alert.html
+++ b/src/main/resources/templates/alert.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.tymeleaf.org">
 <head> <meta charset="UTF-8"/></head>
+
 <body>
 	<div th:if="${success} != null">
 		<div class="alert alert-success alert-dismissible fade show" role="alert">
