--- a/src/main/resources/templates/alert.html
+++ b/src/main/resources/templates/alert.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.tymeleaf.org">
-<head> <meta charset="UTF-8"/></head>
+<html lang="en">
 
 <body>
 	<div th:if="${success} != null">
@@ -9,9 +8,9 @@
 		  <span>
 		  	<strong th:text="${success}"></strong> 
 		  </span>
-		  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-		    <span aria-hidden="true">&times;</span>
-		  </button>
+		  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		   
+		
 		</div>
 	</div>
 	
@@ -21,9 +20,7 @@
 		  <span>
 		  	<strong th:text="${fail}"></strong>
 		  </span>
-		  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-		    <span aria-hidden="true">&times;</span>
-		  </button>
+		 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
 	</div>
 	</body>
