--- a/src/main/resources/templates/cotacao/cotacao_cadastro.html
+++ b/src/main/resources/templates/cotacao/cotacao_cadastro.html
@@ -16,6 +16,8 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+
+
 </head>
 
 <body>
@@ -46,7 +48,7 @@
 				<div class="form-group col-md-8">
 					<label for="propriedade">Produto/Propriedade</label> <select
 						id="propriedade" class="form-control" th:field="*{propriedade}"
-						required >
+						required>
 						<option value="">Selecione...</option>
 						<option th:each="p : ${cotados}" th:value="${p.id}"
 							th:text="${p.produto.nome} + '  - ' + ${p.variedade}  + '  - ' + ${p.subvariedade} + '  - ' + ${p.classificacao} ">
@@ -58,14 +60,22 @@
 
 			<div class="form-row">
 				<div class="form-group col-md-2">
-					<label for="dataCotacao">Data da Cotação</label> <input type="date"
-						class="form-control" id="dataCotacao" autofocus="autofocus"
-						th:field="*{dataCotacao}" value="${dataAtual}" required />
+					<label for="dataCotacao">Data da Cotação</label>
+					<p>
+						Data Atual: <span th:text="${dataAtual}"></span>
+					</p>
+
+					<input type="date" class="form-control" id="dataCotacao"
+						autofocus="autofocus" th:field="*{dataCotacao}"
+						value="${dataAtual}" required />
+
+					
+
 
 					<div class="invalid-feedback">
-						
+
 						<span th:errors="*{dataCotacao}"></span>
-						
+
 					</div>
 				</div>
 			</div>
@@ -342,9 +352,9 @@
 		});
 		/*]]>*/
 	</script>
-	
 
-	
+
+
 </body>
 
 </html>
